# money-tracer

./: README.md
app/: README.md  main.py
deploy/: docker-compose.yaml
docs/: diagram-old.mmd  diagram.mmd
frontend/: README.md  components.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx
frontend/src/hooks/: useAuth.tsx  useError.tsx  useLoading.tsx
frontend/src/pages/: Import.tsx  TransactionsPage.tsx
server/: .env.sample  Cargo.toml
server/migrations/: 1_setup_utils.sql  2_users.sql  3_wallets.sql  4_categories.sql  5_transactions.sql  README.md
server/src/: config.rs  lib.rs  main.rs
server/src/routers/: mod.rs  types.rs
